--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,17 @@
+html {
+  height: 100%;
+}
+
+body {
+ height: 100%;
+ background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(241,241,241,1) 29%,rgba(225,225,225,1) 66%,rgba(246,246,246,1) 100%);
+}
+
 @import "global/normalize.scss";
 @import "global/fonts.scss";
 @import "variables.scss";
 
-@import "blocks/.scss";
+@import "blocks/main.scss";
+@import "blocks/about.scss";
+@import "blocks/socials.scss";
+@import "blocks/projects.scss";
