--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,3 +1,2 @@
-$font-stack: "PT Sans", Arial, Helvetica, sans-serif;
-$main-theme: #81b3d2;
-$font-color: #333333;
+$font-stack: Roboto, Arial, Helvetica, sans-serif;
+$font-color: #272727;
